# kaggle-intro-to-ml

./: README.md  pyproject.toml
src/intro_to_ml/: basic_data_exploration.py  first_ml_model.py  step_1.py  step_3.py  step_4.py  step_5.py  step_6.py
