[tool.poetry]
name = "intro-to-ml"
version = "0.1.0"
description = "The Kaggle Intro to Machine Learning Tutorial found under https://www.kaggle.com/learn/intro-to-machine-learning"
authors = ["René Gentzen <renegentzen@yahoo.de>"]
readme = "README.md"
homepage = "https://github.com/Resteklicken/kaggle-intro-to-ml"
repository = "https://github.com/Resteklicken/kaggle-intro-to-ml"
keywords = ["machine learning", "ml"]
packages = [{include = "intro_to_ml", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
scikit-learn = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
intro = "intro_to_ml.step_1:main"
basic_data_exploration = "intro_to_ml.step_2:main"
first_ml_model = "intro_to_ml.step_3:main"
model_validation = "intro_to_ml.step_4:main"
model_fitting = "intro_to_ml.step_5:main"
random_forests = "intro_to_ml.step_6:main"